# docs/swagger.yaml
@@ -11,22 +11,23 @@ definitions:
         example: true
         type: boolean
     type: object
-  models.ErrorResponse:
+  models.ErrorResponse-error:
     properties:
-      details:
-        additionalProperties: true
-        type: object
-      error:
-        allOf:
-        - $ref: '#/definitions/models.ErrorType'
-        example: FAILED_CHECK
+      details: {}
       message:
         example: This is a pretty message
         type: string
       request_id:
         type: string
+      statusCode:
+        example: 201
+        type: integer
       timestamp:
         type: string
+      type:
+        allOf:
+        - $ref: '#/definitions/models.ErrorType'
+        example: FAILED_CHECK
     type: object
   models.ErrorType:
     enum:
@@ -115,6 +116,8 @@ definitions:
     type: object
   models.ShortenData:
     properties:
+      shortUrl:
+        type: string
       shorten:
         $ref: '#/definitions/models.Shorten'
     type: object
@@ -157,7 +160,7 @@ paths:
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse-error'
       summary: checks app and database health
       tags:
       - health
@@ -184,11 +187,11 @@ paths:
         "400":
           description: Invalid request format or short code already exists
           schema:
-            $ref: '#/definitions/models.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse-error'
         "500":
           description: Server error
           schema:
-            $ref: '#/definitions/models.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse-error'
       summary: Create a shortened URL
       tags:
       - shorten
@@ -207,15 +210,15 @@ paths:
         "400":
           description: Bad request - missing code parameter
           schema:
-            $ref: '#/definitions/models.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse-error'
         "404":
           description: Short URL not found
           schema:
-            $ref: '#/definitions/models.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse-error'
         "500":
           description: Server error
           schema:
-            $ref: '#/definitions/models.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse-error'
       summary: Delete a shortened URL
       tags:
       - shorten
@@ -237,11 +240,11 @@ paths:
         "400":
           description: Bad request - missing code parameter
           schema:
-            $ref: '#/definitions/models.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse-error'
         "404":
           description: Short URL not found or has expired
           schema:
-            $ref: '#/definitions/models.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse-error'
       summary: Redirect to original URL
       tags:
       - shorten
@@ -271,15 +274,15 @@ paths:
         "400":
           description: Invalid request format
           schema:
-            $ref: '#/definitions/models.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse-error'
         "404":
           description: Short URL not found
           schema:
-            $ref: '#/definitions/models.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse-error'
         "500":
           description: Server error
           schema:
-            $ref: '#/definitions/models.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse-error'
       summary: Update a shortened URL
       tags:
       - shorten
@@ -310,15 +313,15 @@ paths:
         "400":
           description: Invalid request format
           schema:
-            $ref: '#/definitions/models.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse-error'
         "404":
           description: Original URL not found and createIfNotExists is false
           schema:
-            $ref: '#/definitions/models.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse-error'
         "500":
           description: Server error
           schema:
-            $ref: '#/definitions/models.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse-error'
       summary: Check if a URL is already shortened
       tags:
       - shorten
